Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/BillToTitle__c.field-meta.xml
<CustomField>
    <fullName>BillToTitle__c</fullName>
    <defaultValue>&apos;Bill To&apos;</defaultValue>
    <description>Title used for Bill To section. Default value is &quot;Bill To&quot;.</description>
    <inlineHelpText>Title used for Bill To section. Default value is &quot;Bill To&quot;.</inlineHelpText>
    <label>Bill To Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>