Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/BorderColor__c.field-meta.xml
<CustomField>
    <fullName>BorderColor__c</fullName>
    <defaultValue>&quot;000000&quot;</defaultValue>
    <description>Color of table borders expressed as a hexadecimal value.</description>
    <inlineHelpText>Color of table borders expressed as a hexadecimal value.</inlineHelpText>
    <label>Border Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>