Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CompanyCountry__c.field-meta.xml
<CustomField>
    <fullName>CompanyCountry__c</fullName>
    <description>Country portion of company address displayed on quote documents.</description>
    <inlineHelpText>Country portion of company address displayed on quote documents.</inlineHelpText>
    <label>Company Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>