Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CompanyEmail__c.field-meta.xml
<CustomField>
    <fullName>CompanyEmail__c</fullName>
    <description>Company email displayed on quote documents. Eg: sales@mycompany.com</description>
    <inlineHelpText>Company email displayed on quote documents. Eg: sales@mycompany.com</inlineHelpText>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>