Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CompanyFax__c.field-meta.xml
<CustomField>
    <fullName>CompanyFax__c</fullName>
    <description>Company FAX displayed on quote documents.</description>
    <inlineHelpText>Company FAX displayed on quote documents.</inlineHelpText>
    <label>Company Fax</label>
    <type>Phone</type>
</CustomField>