Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CompanyPhone__c.field-meta.xml
<CustomField>
    <fullName>CompanyPhone__c</fullName>
    <description>Company phone displayed on quote documents.</description>
    <inlineHelpText>Company phone displayed on quote documents.</inlineHelpText>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>