Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CompanySlogan__c.field-meta.xml
<CustomField>
    <fullName>CompanySlogan__c</fullName>
    <description>Company slogan displayed on quote documents.</description>
    <inlineHelpText>Company slogan displayed on quote documents.</inlineHelpText>
    <label>Company Slogan</label>
    <length>120</length>
    <type>Text</type>
</CustomField>