Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CompanyStreet__c.field-meta.xml
<CustomField>
    <fullName>CompanyStreet__c</fullName>
    <description>Street portion of company address displayed on quote documents.</description>
    <inlineHelpText>Street portion of company address displayed on quote documents.</inlineHelpText>
    <label>Company Street</label>
    <length>120</length>
    <type>Text</type>
</CustomField>