Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CustomerDiscountLabel__c.field-meta.xml
<CustomField>
    <fullName>CustomerDiscountLabel__c</fullName>
    <defaultValue>&quot;DISCOUNT&quot;</defaultValue>
    <description>Label used for customer discount in subtotals and totals sections.</description>
    <inlineHelpText>Label used for customer discount in subtotals and totals sections.</inlineHelpText>
    <label>Customer Discount Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>