Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/CustomerDiscountShown__c.field-meta.xml
<CustomField>
    <fullName>CustomerDiscountShown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if quote-level customer discount is displayed in the quote totals.</description>
    <inlineHelpText>Select the checkbox if you want quote-level customer discount displayed in the quote totals.</inlineHelpText>
    <label>Show Customer Discount</label>
    <type>Checkbox</type>
</CustomField>