Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that marks the template as default, when selected.</description>
    <inlineHelpText>Select this checkbox to mark this template as default.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>