Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/FontSize__c.field-meta.xml
<CustomField>
    <fullName>FontSize__c</fullName>
    <defaultValue>9</defaultValue>
    <description>Default font size for text in this quote document.</description>
    <inlineHelpText>Default font size for text in this quote document.</inlineHelpText>
    <label>Font Size</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>