Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/FooterContent__c.field-meta.xml
<CustomField>
    <fullName>FooterContent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template content that should be rendered in the footer.</description>
    <inlineHelpText>Template content that should be rendered in the footer.</inlineHelpText>
    <label>Footer Content</label>
    <referenceTo>TemplateContent__c</referenceTo>
    <relationshipLabel>Quote Templates (Footer)</relationshipLabel>
    <relationshipName>QuoteTemplatesFooter</relationshipName>
    <type>Lookup</type>
</CustomField>