Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/GeneratorName__c.field-meta.xml
<CustomField>
    <fullName>GeneratorName__c</fullName>
    <description>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</description>
    <inlineHelpText>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</inlineHelpText>
    <label>Generator Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>