Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/GrandTotalPrefix__c.field-meta.xml
<CustomField>
    <fullName>GrandTotalPrefix__c</fullName>
    <description>Prefix for subtotal and total labels in grand totals.</description>
    <inlineHelpText>Prefix for subtotal and total labels in grand totals.</inlineHelpText>
    <label>Grand Total Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>