Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/GroupField__c.field-meta.xml
<CustomField>
    <fullName>GroupField__c</fullName>
    <description>Contains the values you want to use when grouping and subtotaling line items.</description>
    <inlineHelpText>Select the field that has the values you want to use when grouping and subtotaling line items.</inlineHelpText>
    <label>Group Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>