Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/GroupFontFamily__c.field-meta.xml
<CustomField>
    <fullName>GroupFontFamily__c</fullName>
    <description>Family of the font that should be applied to Group title text in this template.</description>
    <inlineHelpText>Family of the font that should be applied to Group title text in this template.</inlineHelpText>
    <label>Group Font Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Dosis</fullName>
            </value>
            <value>
                <fullName>Droid Sans</fullName>
            </value>
            <value>
                <fullName>Droid Serif</fullName>
            </value>
            <value>
                <fullName>Helvetica</fullName>
                <default>true</default>
                <label>Helvetica</label>
            </value>
            <value>
                <fullName>Merriweather</fullName>
            </value>
            <value>
                <fullName>Montserrat</fullName>
            </value>
            <value>
                <fullName>Noto Sans JP</fullName>
            </value>
            <value>
                <fullName>Noto Sans KR</fullName>
            </value>
            <value>
                <fullName>Noto Sans SC</fullName>
            </value>
            <value>
                <fullName>Noto Sans TC</fullName>
            </value>
            <value>
                <fullName>Open Sans</fullName>
            </value>
            <value>
                <fullName>Play</fullName>
            </value>
            <value>
                <fullName>PT Sans</fullName>
            </value>
            <value>
                <fullName>PT Serif</fullName>
            </value>
            <value>
                <fullName>Roboto</fullName>
            </value>
            <value>
                <fullName>Roboto Light</fullName>
            </value>
            <value>
                <fullName>Times</fullName>
            </value>
            <value>
                <fullName>Titillium Web</fullName>
            </value>
            <value>
                <fullName>Ubuntu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>