Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/GroupFontSize__c.field-meta.xml
<CustomField>
    <fullName>GroupFontSize__c</fullName>
    <defaultValue>9.0</defaultValue>
    <description>Default font size for Group titles</description>
    <inlineHelpText>Default font size for Group titles</inlineHelpText>
    <label>Group Font Size</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>