Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/GroupShadingColor__c.field-meta.xml
<CustomField>
    <fullName>GroupShadingColor__c</fullName>
    <defaultValue>&apos;FFFFFF&apos;</defaultValue>
    <description>Color of the shading for table cells that contain group title and description.</description>
    <inlineHelpText>Color of the shading for table cells that contain group title and description.</inlineHelpText>
    <label>Group Shading Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>