Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/GroupTextColor__c.field-meta.xml
<CustomField>
    <fullName>GroupTextColor__c</fullName>
    <defaultValue>&apos;000000&apos;</defaultValue>
    <description>Color for the group title and description text.</description>
    <inlineHelpText>Color for the group title and description text.</inlineHelpText>
    <label>Group Text Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>