Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/LogoDocumentId__c.field-meta.xml
<CustomField>
    <fullName>LogoDocumentId__c</fullName>
    <description>ID of the Document which conatins logo image for use in quote PDF.</description>
    <inlineHelpText>Salesforce ID for the document containing the logo image used in the quote PDF.</inlineHelpText>
    <label>Logo Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>