Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/NotesTitle__c.field-meta.xml
<CustomField>
    <fullName>NotesTitle__c</fullName>
    <description>Title of the section that displays the Notes field.</description>
    <inlineHelpText>Title of the section that displays the Notes field. To display no title, leave this field blank.</inlineHelpText>
    <label>Notes Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>