Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/PageNumberPosition__c.field-meta.xml
<CustomField>
    <fullName>PageNumberPosition__c</fullName>
    <description>Specifies where the page numbers are displayed in the document.</description>
    <inlineHelpText>Specify where the page numbers are displayed in the document. Defaults to Footer if the field is blank.</inlineHelpText>
    <label>Page Number Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Footer</fullName>
                <default>true</default>
                <label>Footer</label>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>