Salesforce CPQ/main/default/objects/QuoteTemplate__c/fields/PartnerDiscountShown__c.field-meta.xml
<CustomField>
    <fullName>PartnerDiscountShown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the quote-level partner discount is displayed in the quote totals.</description>
    <inlineHelpText>Select the checkbox if you want quote-level partner discount displayed in the quote totals.</inlineHelpText>
    <label>Show Partner Discount</label>
    <type>Checkbox</type>
</CustomField>